# simple-cpp-xml

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  coverage-notes-pr.yml  linux.yml  macos.yml  windows.yml
src/: CMakeLists.txt
src/simple_cpp_xml/: attribute.hpp  exception.cpp  exception.hpp  parser.cpp  parser.hpp  reader.hpp  string_reader.cpp  string_reader.hpp
test/: CMakeLists.txt  test.cpp
test/resources/: doctypeWithNested.xml  emptyTag.xml  jacocoTestReport.xml  with_bom.xml
